fix bug with how matchbar wraps, rename matchbar

--- a/static/css/less_css/less/tba/tba_gameday.less
+++ b/static/css/less_css/less/tba/tba_gameday.less
@@ -215,10 +215,10 @@ body {
   display: block;
 }
 
-.match_info {
+.match_bar {
   background-color: @grayDarker * 0.5;
   z-index: 4999;
-  width: 200%;
+  width: 100%;
   height: @matchBarHeight;
   position: absolute;
   bottom: 0px;
@@ -227,7 +227,7 @@ body {
   overflow: hidden;
   
   .matches {
-    width: 100%;
+    width: 200%;
     height: 100%;
   }
   
